se agrega a swagger los nuevos endpoint y se ajusta un error en las properties que recibian
